# shepherd-game-cpp

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake
Project_SDL_Part1_base/: CMakeLists.txt  constants.cpp  constants.h  main.cpp
Project_SDL_Part1_base/Characters/: animal.cpp  animal.h  bearman.cpp  bearman.h  pet.cpp  pet.h  playable_character.cpp  playable_character.h  sheep.cpp  sheep.h  shepherd.cpp  shepherd.h  shepherd_dog.cpp  shepherd_dog.h  wolf.cpp  wolf.h
Project_SDL_Part1_base/Game/: application.cpp  application.h  ground.cpp  ground.h
Project_SDL_Part1_base/GameObjects/: interracting_object.cpp  interracting_object.h  moving_object.cpp  moving_object.h  rendered_object.cpp  rendered_object.h
Project_SDL_Part1_base/SDL2/include/: SDL_stdinc.h
Project_SDL_Part1_base/SDL_part1.dSYM/Contents/: Info.plist
Project_SDL_Part1_base/SDL_part1.dSYM/Contents/Resources/DWARF/: SDL_part1
